# lab06

.github/workflows/: action.yml  main.yml
formatter_ex_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  formatter_ex.cpp
formatter_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  formatter.cpp
hello_world_application/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello_world.cpp
solver_application/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  equation.cpp  install_manifest.txt
solver_application/_CPack_Packages/Linux-Source/RPM/formatter_ex-0.1.1-Source/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  formatter_ex-0.1.1-Linux.tar.Z  formatter_ex-0.1.1-Linux.tar.bz2
solver_application/_CPack_Packages/Linux-Source/RPM/formatter_ex-0.1.1-Source/_CPack_Packages/Linux/DEB/: solvering.deb
solver_application/_CPack_Packages/Linux-Source/RPM/formatter_ex-0.1.1-Source/_CPack_Packages/Linux/DEB/formatter_ex-0.1.1-Linux/: control
solver_application/_CPack_Packages/Linux-Source/RPM/formatter_ex-0.1.1-Source/_CPack_Packages/Linux/TBZ2/: solvering.dmg.tar.bz2
solver_application/_CPack_Packages/Linux-Source/RPM/formatter_ex-0.1.1-Source/_CPack_Packages/Linux/TZ/: solvering.dmg.tar.Z
solver_application/_CPack_Packages/Linux/DEB/: solvering.deb
solver_application/_CPack_Packages/Linux/DEB/wixxx/: md5sums
solver_application/_CPack_Packages/Linux/RPM/: rpmbuildformatter_ex.err  rpmbuildformatter_ex.out
solver_application/_CPack_Packages/Linux/RPM/RPMS/: solvering.rpm
solver_application/_CPack_Packages/Linux/RPM/SPECS/: formatter_ex.spec
solver_lib/: solver.cpp
