cmake_minimum_required(VERSION 3.4)
project(formatter_ex)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(formatter_ex STATIC /home/mat03/Arthur-Kitsuragi/workspace/projects/lab03/formatter_ex_lib/formatter_ex.cpp)
include_directories(/home/mat03/Arthur-Kitsuragi/workspace/projects/lab03/formatter_ex_lib)
target_link_libraries(formatter_ex formatter)
target_include_directories(formatter_ex PUBLIC /home/mat03/Arthur-Kitsuragi/workspace/projects/lab03/formatter_lib)