cmake_minimum_required(VERSION 3.4)
project(formatter_ex)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(hello_world /home/mat03/Arthur-Kitsuragi/workspace/projects/lab03/hello_world_application/hello_world.cpp)
target_link_libraries(hello_world /home/mat03/Arthur-Kitsuragi/workspace/projects/lab03/formatter_ex_lib/libformatter_ex.a)
target_include_directories(hello_world PUBLIC /home/mat03/Arthur-Kitsuragi/workspace/projects/lab03/formatter_ex_lib)
target_include_directories(hello_world PUBLIC /home/mat03/Arthur-Kitsuragi/workspace/projects/lab03/formatter_lib)
target_link_libraries(hello_world /home/mat03/Arthur-Kitsuragi/workspace/projects/lab03/formatter_lib/libformatter.a)