cmake_minimum_required(VERSION 3.4)
project(formatter_ex)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(/home/mat03/Arthur-Kitsuragi/workspace/projects/lab03/solver_application)
add_library(solverlib STATIC /home/mat03/Arthur-Kitsuragi/workspace/projects/lab03/solver_lib/solver.cpp)
target_include_directories(solverlib PUBLIC /home/mat03/Arthur-Kitsuragi/workspace/projects/lab03/solver_lib)
add_executable(solver /home/mat03/Arthur-Kitsuragi/workspace/projects/lab03/solver_application/equation.cpp)
target_link_libraries(solver /home/mat03/Arthur-Kitsuragi/workspace/projects/lab03/formatter_ex_lib/libformatter_ex.a)
target_include_directories(solver PUBLIC /home/mat03/Arthur-Kitsuragi/workspace/projects/lab03/formatter_ex_lib)
target_include_directories(solver PUBLIC /home/mat03/Arthur-Kitsuragi/workspace/projects/lab03/formatter_lib)
target_link_libraries(solver /home/mat03/Arthur-Kitsuragi/workspace/projects/lab03/formatter_lib/libformatter.a)
target_link_libraries(solver solverlib)
