cmake_minimum_required(VERSION 3.4)
project(formatter_ex)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
option(make_bin "switch options" OFF)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../solver_application)
add_library(solverlib STATIC ${CMAKE_CURRENT_SOURCE_DIR}/../solver_lib/solver.cpp)
target_include_directories(solverlib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../solver_lib)
add_executable(solver ${CMAKE_CURRENT_SOURCE_DIR}/../solver_application/equation.cpp)
target_link_libraries(solver ${CMAKE_CURRENT_SOURCE_DIR}/../formatter_ex_lib/libformatter_ex.a)
target_include_directories(solver PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../formatter_ex_lib)
target_include_directories(solver PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../formatter_lib)
target_link_libraries(solver ${CMAKE_CURRENT_SOURCE_DIR}/../formatter_lib/libformatter.a)
target_link_libraries(solver solverlib)
if(make_bin)
	install(TARGETS solver RUNTIME DESTINATION bin)
	set(CPACK_GENERATOR "DEB")
	set(CPACK_DEBIAN_PACKAGE_MAINTAINER "David Doria")
	set(CPACK_DEBIAN_FILE_NAME "solvering.deb")
	set(CPACK_GENERATOR "DragNDrop")
	set(CPACK_PACKAGE_FILE_NAME "solvering_dmg")
	set(CPACK_GENERATOR "RPM")
	set(CPACK_RPM_FILE_NAME solvering.rpm)
	set(CPACK_GENERATOR "WIX")
	set(CPACK_PACKAGE_FILE_NAME "wixxx")
else()
	install(FILES equation.cpp DESTINATION src)
	install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/../formatter_ex_lib/libformatter_ex.a DESTINATION src)
	install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/../formatter_lib/libformatter.a DESTINATION src)
	install(TARGETS solverlib DESTINATION src)
	set(CPACK_GENERATOR "TGZ")
	set(CPACK_PACKAGE_FILE_NAME "just_code")
endif()
include(CPack)