cmake_minimum_required(VERSION 3.4)
project(formatter_ex)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(/home/mat03/Arthur-Kitsuragi/workspace/projects/lab06_1/solver_application)
add_library(solverlib STATIC /home/mat03/Arthur-Kitsuragi/workspace/projects/lab06_1/solver_lib/solver.cpp)
target_include_directories(solverlib PUBLIC /home/mat03/Arthur-Kitsuragi/workspace/projects/lab06_1/solver_lib)
add_executable(solver /home/mat03/Arthur-Kitsuragi/workspace/projects/lab06_1/solver_application/equation.cpp)
target_link_libraries(solver /home/mat03/Arthur-Kitsuragi/workspace/projects/lab06_1/formatter_ex_lib/libformatter_ex.a)
target_include_directories(solver PUBLIC /home/mat03/Arthur-Kitsuragi/workspace/projects/lab06_1/formatter_ex_lib)
target_include_directories(solver PUBLIC /home/mat03/Arthur-Kitsuragi/workspace/projects/lab06_1/formatter_lib)
target_link_libraries(solver /home/mat03/Arthur-Kitsuragi/workspace/projects/lab06_1/formatter_lib/libformatter.a)
target_link_libraries(solver solverlib)
install(TARGETS solver RUNTIME DESTINATION bin)
set(CPACK_GENERATOR "DEB")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "David Doria")
set(CPACK_DEBIAN_FILE_NAME "solvering.deb")
set(CPACK_GENERATOR "TZ")
set(CPACK_PACKAGE_FILE_NAME "solvering")
set(CPACK_GENERATOR "DragNDrop")
set(CPACK_PACKAGE_FILE_NAME "solvering_dmg")
set(CPACK_GENERATOR "RPM")
set(CPACK_RPM_FILE_NAME RPMM)
set(CPACK_GENERATOR "WIX")
set(CPACK_PACKAGE_FILE_NAME "wixxx")
include(CPack)